src/test/resources/error/Deadlock.mch
MACHINE Deadlock
VARIABLES x
INVARIANT x : 1..3
INITIALISATION x := 1
OPERATIONS
foo = PRE x = 1 THEN x:= 2 END 
END